# backup-pilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  backup_pilot.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backup_pilot/cli/: main.py  wizard.py
backup_pilot/compression/: base.py  factory.py  gzip_compressor.py  none_compressor.py
backup_pilot/config/: loader.py  models.py
backup_pilot/core/: exceptions.py  interfaces.py  models.py
backup_pilot/db/: base.py  factory.py  mongodb_connector.py  mysql_connector.py  postgres_connector.py  sqlite_connector.py
backup_pilot/db/strategies/: differential_backup.py  full_backup.py  incremental_backup.py
backup_pilot/encryption/: __init__.py  base.py  factory.py  fernet_encryptor.py  none_encryptor.py
backup_pilot/logging/: logger.py
backup_pilot/metadata/: store.py
backup_pilot/notifications/: base.py  email_notifier.py  factory.py  slack_notifier.py
backup_pilot/services/: backup_service.py  connection_service.py  restore_service.py  rotation_service.py
backup_pilot/storage/: azure_blob_storage.py  base.py  factory.py  gcs_storage.py  local_storage.py  s3_storage.py
examples/: config-aws.yaml  config-azure.yaml  config-basic.yaml  config-gcp.yaml
examples/cron/: backup-mysql-daily
tests/unit/: test_cli.py  test_encryption.py  test_metadata_store.py  test_rotation.py  test_services.py  test_strategies_incremental_differential.py
